--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
     <div class="navbar">
         <a href="#" onclick="showLogin()">Login</a>
         <a href="#" onclick="showSignUp()">Sign Up</a>
+        <a href="view-score.html">View Score</a>
     </div>
 
     <div class="container">
