--- a/view-score.html
+++ b/view-score.html
@@ -83,6 +83,7 @@
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
+        <a href="index.html">Bet</a>
         <a href="view-score.html">View Score</a>
     </div>
 
