--- a/view-score.html
+++ b/view-score.html
@@ -149,8 +149,8 @@
                     <thead>
                         <tr>
                             <th>Stat</th>
-                            <th>Team A</th>
-                            <th>Team B</th>
+                            <th>Riders</th>
+                            <th>Golden Star</th>
                         </tr>
                     </thead>
                     <tbody>
