--- a/view-score.html
+++ b/view-score.html
@@ -173,6 +173,9 @@
                 </table>
             </div>
         </div>
+        <div class="container">
+            <h1>CHECK HIGHLIGHTS</h1>
+        </div>
     </div>
     <!-- Firebase setup -->
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
