--- a/view-score.html
+++ b/view-score.html
@@ -174,7 +174,7 @@
             </div>
         </div>
         <div class="container">
-            <h1>CHECK HIGHLIGHTS</h1>
+            <a href="view.html">Sermon: "Check Highlights here"</a>
         </div>
     </div>
     <!-- Firebase setup -->
