--- a/view-score.html
+++ b/view-score.html
@@ -174,7 +174,7 @@
             </div>
         </div>
         <div class="container">
-            <a href="view.html">Sermon: "Check Highlights here"</a>
+            <a href="view.html">Check Highlights here</a>
         </div>
     </div>
     <!-- Firebase setup -->
