--- a/view-score.html
+++ b/view-score.html
@@ -184,7 +184,7 @@
             </div>
         </div>
     <a href="view.html">
-        <img src="thumbnail.jpg" alt="Thumbnail Image" class="thumbnail">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNRfEiyQbuUhI56wBenkn7v8SM0Tnq9kln1g&s" alt="Thumbnail Image" class="thumbnail">
     </a>
     </div>
     <!-- Firebase setup -->
