--- a/view-score.html
+++ b/view-score.html
@@ -91,6 +91,16 @@
         .thumbnail:hover {
             transform: scale(1.05);
         }
+                .footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 18px;
+        }
+        .whatsapp-icon {
+            width: 24px;
+            vertical-align: middle;
+            margin-left: 10px;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
@@ -279,5 +289,11 @@
         const countdownInterval = setInterval(updateCountdown, 1000);
         updateCountdown();
     </script>
+        <div class="footer">
+        Riders FC 
+        <a href="https://wa.me/2348102341648" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp Icon" class="whatsapp-icon">
+        </a>
+    </div>
 </body>
 </html>
