--- a/view.html
+++ b/view.html
@@ -59,8 +59,8 @@
             flex-wrap: wrap;
         }
         .media-item {
-            width: 600px;
-            height: 400px;
+            width: auto;
+            height: auto;
             object-fit: cover;
             margin: 10px;
         }
