--- a/view.html
+++ b/view.html
@@ -59,8 +59,8 @@
             flex-wrap: wrap;
         }
         .media-item {
-            width: auto;
-            height: auto;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
             margin: 10px;
         }
