--- a/view.html
+++ b/view.html
@@ -59,8 +59,8 @@
             flex-wrap: wrap;
         }
         .media-item {
-            width: 100%;
-            height: 100%;
+            width: 500px;
+            height: 350ox;
             object-fit: cover;
             margin: 10px;
         }
