--- a/view.html
+++ b/view.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Media</title>
+    <title>Upload and Manage Media</title>
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js';
-        import { getStorage } from 'https://www.gstatic.com/firebasejs/9.0.2/firebase-storage.js';
-        import { getDatabase, ref as dbRef, onValue, set, increment, push } from 'https://www.gstatic.com/firebasejs/9.0.2/firebase-database.js';
+        import { getStorage, ref as storageRef, uploadBytesResumable, getDownloadURL } from 'https://www.gstatic.com/firebasejs/9.0.2/firebase-storage.js';
+        import { getDatabase, ref as dbRef, push, onValue, set, increment } from 'https://www.gstatic.com/firebasejs/9.0.2/firebase-database.js';
 
         const firebaseConfig = {
             apiKey: "AIzaSyB6tWe0xxeg9-A8rfv3ouRAWHkJzM1klzU",
@@ -23,6 +23,39 @@
         const storage = getStorage(app);
         const database = getDatabase(app);
 
+        window.uploadFile = () => {
+            const fileInput = document.getElementById('fileInput');
+            const file = fileInput.files[0];
+            if (!file) {
+                alert("Please select a file.");
+                return;
+            }
+
+            const fileRef = storageRef(storage, 'media/' + file.name);
+            const uploadTask = uploadBytesResumable(fileRef, file);
+
+            uploadTask.on('state_changed', 
+                (snapshot) => {
+                    // Observe state change, progress, etc.
+                }, 
+                (error) => {
+                    console.error("Upload failed:", error);
+                }, 
+                () => {
+                    getDownloadURL(uploadTask.snapshot.ref).then((downloadURL) => {
+                        const mediaRef = dbRef(database, 'media');
+                        push(mediaRef, {
+                            url: downloadURL,
+                            type: file.type,
+                            name: file.name,
+                            timestamp: Date.now() // Add timestamp here
+                        });
+                        alert("Upload successful!");
+                    });
+                }
+            );
+        }
+
         function displayMedia() {
             const mediaContainer = document.getElementById('media-container');
             const mediaRef = dbRef(database, 'media');
@@ -34,6 +67,8 @@
                     const mediaKey = childSnapshot.key;
                     const mediaType = mediaData.type;
                     const mediaUrl = mediaData.url;
+                    const mediaName = mediaData.name;
+                    const mediaTimestamp = mediaData.timestamp; // Get timestamp
 
                     const mediaFrame = document.createElement('div');
                     mediaFrame.classList.add('media-frame');
@@ -47,6 +82,14 @@
                     }
                     mediaElement.src = mediaUrl;
                     mediaElement.classList.add('media-item');
+
+                    // Format the timestamp
+                    const date = new Date(mediaTimestamp);
+                    const formattedDate = `${date.toLocaleDateString()} ${date.toLocaleTimeString()}`;
+
+                    const timestampElement = document.createElement('div');
+                    timestampElement.textContent = `Uploaded on: ${formattedDate}`;
+                    timestampElement.classList.add('timestamp');
 
                     const buttonContainer = document.createElement('div');
                     buttonContainer.classList.add('button-container');
@@ -90,6 +133,7 @@
                     buttonContainer.appendChild(shareButton);
 
                     mediaFrame.appendChild(mediaElement);
+                    mediaFrame.appendChild(timestampElement); // Add timestamp to media frame
                     mediaFrame.appendChild(buttonContainer);
                     mediaFrame.appendChild(commentForm);
                     mediaFrame.appendChild(commentList);
@@ -167,6 +211,11 @@
             width: 100%;
             max-height: 500px;
             object-fit: cover;
+        }
+        .timestamp {
+            font-size: 14px;
+            color: #555;
+            margin-top: 5px;
         }
         .button-container {
             display: flex;
@@ -274,21 +323,29 @@
         <a href="#" class="share-popup-button" id="share-whatsapp">Share on WhatsApp</a>
     </div>
 
-    <script>
-        document.addEventListener('click', function(event) {
-            if (event.target && event.target.id === 'share-facebook') {
-                const url = document.getElementById('share-popup-url').value;
-                window.open(`https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(url)}`, '_blank');
-            }
-            if (event.target && event.target.id === 'share-twitter') {
-                const url = document.getElementById('share-popup-url').value;
-                window.open(`https://twitter.com/intent/tweet?url=${encodeURIComponent(url)}`, '_blank');
-            }
-            if (event.target && event.target.id === 'share-whatsapp') {
-                const url = document.getElementById('share-popup-url').value;
-                window.open(`https://wa.me/?text=${encodeURIComponent(url)}`, '_blank');
-            }
-        });
-    </script>
+<script>
+    document.addEventListener('click', function(event) {
+        if (event.target && event.target.id === 'share-facebook') {
+            const url = document.getElementById('share-popup-url').value;
+            window.open(`https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(url)}`, '_blank');
+            hideSharePopup();
+        }
+        if (event.target && event.target.id === 'share-twitter') {
+            const url = document.getElementById('share-popup-url').value;
+            window.open(`https://twitter.com/intent/tweet?url=${encodeURIComponent(url)}`, '_blank');
+            hideSharePopup();
+        }
+        if (event.target && event.target.id === 'share-whatsapp') {
+            const url = document.getElementById('share-popup-url').value;
+            window.open(`https://wa.me/?text=${encodeURIComponent(url)}`, '_blank');
+            hideSharePopup();
+        }
+    });
+
+    function hideSharePopup() {
+        document.getElementById('share-popup').classList.remove('show');
+    }
+</script>
+
 </body>
 </html>
